...
          paragraphNode(text: '50 gp'),
        ],
        [
          paragraphNode(
            delta: Delta()..insert('Stock', attributes: {'bold': true}),
          ),
          paragraphNode(text: '12'),
          paragraphNode(text: '5'),
        ],
      ]).node,
      paragraphNode(
          text: '3. Borderless', styleRef: kHeadingDefaultStyles[1].id),
      TableNode.fromNodes(
...
